# qemu-vp

./: .gitignore  .gitmodules  Makefile  README.md  build.sh  jxl-atf-xen-plan.md  start.sh  uboot-boot-chain.md
demo/qt-demo/: CMakeLists.txt  main.cpp
dts/: jxl-optee-overlay.dts  jxl.dts  jxl.dtsi
